ms-loans: add test